<resources>
    <string name="app_name">FilmGan2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movie</string>
    <string name="tv_show">TV show</string>
    <string name="profile">Account</string>
    <string name="judul_film">Moview Title</string>
    <string name="image_film">Image Movie</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="duration">Duration</string>
    <string name="search">Search</string>
    <string name="language">Change Language</string>
    <string name="title_language">Language</string>
    <string name="text_change_language">Choose Language</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="franch">France</string>
    <string name="ok">OK</string>
    <string name="image_tv_show">Image TV Show</string>
    <string name="tv_show_title">TV Show Title</string>
    <string name="actionbar_detail_film">Detail Movie</string>
    <string name="actionbar_detail_tv">Detail TV</string>
    <string name="title_dialog">Restart App</string>
    <string name="body_dialog">Click Yes to restart!</string>
    <string name="ya">Yes</string>
    <string name="no">No</string>
    <string name="succes_save_data">Add to favorit</string>
    <string name="success_delete_data">Delete From Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="search_film">Search Film</string>
    <string name="search_tv">Search TV Show</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty">No Data</string>
    <string name="genre">Genre</string>
    <string name="release">Release</string>
    <string name="change_language">Change Language</string>
    <string name="reminder_film">Reminder Movie Catalog</string>
    <string name="notification_new_film">Notification New Movie</string>
    <string name="title_activity_settings">Settings</string>
    <string name="key_change_language">KeyChangeLanguage</string>
    <string name="switch_preference_notification_new_film">new_film</string>
    <string name="switch_preference_reminder_notification">reminder</string>

    <!--    Description TV SHOW-->

</resources>
