<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false"
    android:layout_gravity="center"
    android:elevation="30dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/image_film"
            android:id="@+id/rv_imageFilm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/poster_bumblebee"
            android:transitionName="imageTransition"
            android:scaleType="centerCrop"
            android:background="@drawable/background_image"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/rv_judul_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/judul_film"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/rv_judul_film" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_star_black_main_24dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_imageFilm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_judul_film" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_access_time_black_main_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_imageFilm"
            app:layout_constraintStart_toEndOf="@+id/rv_rating"
            app:layout_constraintTop_toBottomOf="@+id/rv_judul_film" />

        <TextView
            android:id="@+id/rv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Duration"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/rv_imageFilm"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/rv_judul_film" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>